<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BTTerminal" >

    <item android:id="@+id/action_connect"
        android:title="@string/menu_item_connect"
        android:icon="@android:drawable/stat_sys_data_bluetooth"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:visible="true" />

    <item android:id="@+id/action_disconnect"
        android:title="@string/menu_item_disconnect"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:visible="false" />

    <item android:id="@+id/action_clear"
        android:title="@string/menu_item_clear"
        android:orderInCategory="300"
        android:showAsAction="never" />

    <item android:id="@+id/action_echo"
        android:title="@string/menu_item_echo"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:checkable="true" />

    <item android:id="@+id/action_listen"
        android:title="@string/menu_item_listen"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:checkable="true" />
</menu>
